docs: Tidy documents structure, Add component docs

--- a/front/documents/page/01.landing-page.md
+++ b/front/documents/page/01.landing-page.md
@@ -1,6 +1,12 @@
 # 01. 랜딩 페이지
 
-<img src="../draft/01.landing-page.jpg" alt="01.landing-page" width="500" />
+<img src="../resources/page/01.landing-page.jpg" alt="01.landing-page" width="500" />
+
+<br/><br/><br/>
+
+## 플로우 차트
+
+<img src="../resources/page/01.landing-page-flowchart.png" alt="01.landing-page-flowchart" width="500" />
 
 ## 변환한 pseudo layout code
 
