--- a/front/documents/page/02.signin-page.md
+++ b/front/documents/page/02.signin-page.md
@@ -1,6 +1,6 @@
 # 02. 가입 페이지
 
-<img src="../draft/02.signin-page.jpg" alt="02.signin-page" width="500" />
+<img src="../resources/page/02.signin-page.jpg" alt="02.signin-page" width="500" />
 
 ## 변환한 pseudo layout code
 
