--- a/front/documents/page/03.main-page.md
+++ b/front/documents/page/03.main-page.md
@@ -1,6 +1,6 @@
 # 03. 메인 페이지
 
-<img src="../draft/03.main-page.jpg" alt="03.main-page" width="600" />
+<img src="../resources/page/03.main-page.jpg" alt="03.main-page" width="600" />
 
 ## 변환한 pseudo layout code
 
@@ -52,58 +52,4 @@
     </FooterItems>
   </Footer>
 </Main>
-```
-
-<img src="../draft/03.menu.jpg" alt="03.menu" width="600" />
-
-```HTML
-<Landing>
-  <!-- 1. Nav -->
-  <Nav />
-
-  <!-- 2. Main -->
-  <SigninMain>
-    <AuthItems>
-      <!-- link to /signin-google -->
-      <Auth authType="google" linkTo="/google" />
-      <!-- link to /signin-kakao -->
-      <Auth authType="kakao" linkTo="/kakao" />
-    </AuthItems>
-    <Menu />
-  </SigninMain>
-
-  <!-- 3. Footer -->
-  <Footer>
-    <FooterItems>
-      {<FooterItem>}*3
-    </FooterItems>
-  </Footer>
-</Landing>
-```
-
-<img src="../draft/03.search-box.jpg" alt="03.search-box" width="600" />
-
-```HTML
-<Landing>
-  <!-- 1. Nav -->
-  <Nav />
-
-  <!-- 2. Main -->
-  <SigninMain>
-    <AuthItems>
-      <!-- link to /signin-google -->
-      <Auth authType="google" linkTo="/google" />
-      <!-- link to /signin-kakao -->
-      <Auth authType="kakao" linkTo="/kakao" />
-    </AuthItems>
-    <Menu />
-  </SigninMain>
-
-  <!-- 3. Footer -->
-  <Footer>
-    <FooterItems>
-      {<FooterItem>}*3
-    </FooterItems>
-  </Footer>
-</Landing>
 ```
